# Kastingon_video_pp

./: .gitignore  README.md  finetune_stage_1.py  finetune_stage_2.py  fintune_stage_2_simple.py  pyproject.toml  requirements.txt
.github/workflows/: style.yml
_src/dataset/: dance_video.py
_src/models/: mutual_self_attention.py  pose_guider.py
_src/pipelines/: pipeline_pose2img.py  pipeline_pose2vid.py  pipeline_pose2vid_long.py  pipeline_pose2vid_videodiff.py  pipeline_pose2vid_videodiff_LCM.py
_src/utils/: util.py
_src/utils copy/: util.py
configs/inference/: inference_v2.yaml
configs/prompts/: animation.yaml
configs/train/: finetune_stage1.yaml  finetune_stage2.yaml  stage1.yaml  stage2.yaml
scripts/: pose2vid.py  pose2vid_vivid.py  pose2vid_vivid_LCM.py
src/dataset/: dance_image.py
src/dwpose/: __init__.py  util.py
src/models/: pose_guider.py
src/moore_preprocess/: __init__.py
src/moore_preprocess/dl_models/VideoMatting/: __init__.py  decoder.py  inference_utils.py  main.py  mobilenetv3.py  model.py  resnet.py
src/moore_preprocess/dl_models/dwpose/: __init__.py  util.py  wholebody.py
src/moore_preprocess/utils/: download_weights.py  util.py  video_clipper.py
src/pipelines/: pipeline_pose2vid_videodiff.py  pipeline_pose2vid_videodiff_LCM.py
tests/: crop_frame.py  download_weights.py  extract_dwpose_from_vid.py  test.py  work_frame.py  work_video.py
tools/: extract_dwpose_from_vid.py  extract_meta_info.py  rename_vid.py  tiktok2pose.py
