[tool.poetry]
name = "moore-preprocess"
version = "0.1.0"
description = ""
authors = ["DJ02-a <pensee0.0a@gmail.com>"]
readme = "README.md"
packages = [{include = "moore_preprocess", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
av = "11.0.0"
brotli = "1.0.9"
build = "1.1.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "2.0.4"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
contourpy = "1.2.0"
controlnet-aux = "0.0.7"
crashtest = "0.4.1"
cryptography = "42.0.5"
cycler = "0.12.1"
debugpy = "1.8.0"
distlib = "0.3.7"
dulwich = "0.21.7"
einops = "0.7.0"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
flatbuffers = "2.0"
fonttools = "4.49.0"
fsspec = "2024.2.0"
gmpy2 = "2.1.2"
greenlet = "3.0.1"
huggingface-hub = "0.21.3"
humanfriendly = "10.0"
idna = "3.4"
imageio = "2.34.0"
importlib-metadata = "7.0.1"
installer = "0.7.0"
isort = "5.12.0"
jaraco-classes = "3.3.1"
jeepney = "0.8.0"
jinja2 = "3.1.3"
keyring = "24.3.1"
kiwisolver = "1.4.5"
lazy-loader = "0.3"
markupsafe = "2.1.3"
matplotlib = "3.8.3"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.0.7"
mypy-extensions = "1.0.0"
networkx = "3.1"
numpy = "1.24.4"
onnxruntime = "1.15.1"
opencv-python = "4.8.1.78"
openexr = "1.3.2"
packaging = "23.2"
pexpect = "4.9.0"
pillow = "10.2.0"
pip = "23.3.1"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.6.0"
protobuf = "3.20.3"
ptyprocess = "0.7.0"
pycparser = "2.21"
pygments = "2.17.2"
pynvim = "0.4.3"
pyparsing = "3.1.1"
pyproject-hooks = "1.0.0"
pysocks = "1.7.1"
pyte = "0.8.2"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.1"
rapidfuzz = "3.6.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
safetensors = "0.4.2"
scikit-image = "0.22.0"
scipy = "1.12.0"
secretstorage = "3.3.3"
setuptools = "68.2.2"
shellingham = "1.5.4"
six = "1.16.0"
sympy = "1.12"
thefuck = "3.32"
tifffile = "2024.2.12"
timm = "0.9.16"
tomlkit = "0.12.4"
torch = "2.0.1"
torchaudio = "2.0.2"
torchvision = "0.15.2"
tqdm = "4.66.2"
triton = "2.0.0"
trove-classifiers = "2024.3.3"
typing-extensions = "4.9.0"
urllib3 = "2.1.0"
virtualenv = "20.25.0"
wcwidth = "0.2.12"
wheel = "0.41.2"
zipp = "3.17.0"

[tool.poetry.group.dev] # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
black = "~ 23.9"
ruff = ">= 0.1.0"
pytest = ">= 7.4.0"
pytest-cov = ">= 4.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=kasting_dl" # CHANGE (name of the importing module name)
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.isort]
profile = "black"
known_third_party = ["wandb", "torch", "torchvision", "accelerate", "xformers"]

[tool.ruff]
target-version = "py311"

# Black will enforce line length to be 88, except for docstrings and comments.
# We set it to 120 so we have more space for docstrings and comments.
line-length = 120

# E402: Module level import not at top of file
ignore = ["E402"] # OPTIONALLY ADD MORE LATER

[tool.coverage.report]
omit = [
  "src/kasting_dl/_versioneer.py", # CHANGE
]
