[tool.poetry]
name = "moore-preprocess"
version = "0.1.0"
description = ""
authors = ["DJ02-a <pensee0.0a@gmail.com>"]
readme = "README.md"
packages = [{include = "moore_preprocess", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "^0.21.4"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
scipy = "^1.12.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
controlnet-aux = "^0.0.7"
matplotlib = "^3.8.3"
onnxruntime = "^1.17.1"
av = "^11.0.0"
pims = "^0.6.1"


[tool.poetry.group.dev] # This part can be left out
optional = true

[tool.poetry.group.dev.dependencies]
black = "~ 23.9"
ruff = ">= 0.1.0"
pytest = ">= 7.4.0"
pytest-cov = ">= 4.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=kasting_dl" # CHANGE (name of the importing module name)
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.isort]
profile = "black"
known_third_party = ["wandb", "torch", "torchvision", "accelerate", "xformers"]

[tool.ruff]
target-version = "py311"

# Black will enforce line length to be 88, except for docstrings and comments.
# We set it to 120 so we have more space for docstrings and comments.
line-length = 120

# E402: Module level import not at top of file
ignore = ["E402"] # OPTIONALLY ADD MORE LATER

[tool.coverage.report]
omit = [
  "src/kasting_dl/_versioneer.py", # CHANGE
]
